fix: harden null guards, encoding, credential consistency and step validation
Signed-off-by: Jesus Recio <jrecio@izertis.com>